--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "joi": "^17.12.1",
     "pg": "^8.11.3"
   }
 }
